Fixed title being cut off issue

--- a/assets/css/darktheme.css
+++ b/assets/css/darktheme.css
@@ -190,6 +190,11 @@ li
 	color: #414141;
 }
 
+a:hover
+{
+	text-decoration: none !important;
+}
+
 /* Jumbotron
 **************************************************************************/
 #jumbotron
@@ -206,6 +211,7 @@ li
 	opacity: 0.85; 
 	position: relative;
 	height: 100vh;
+	width: 100%;
 	text-align: center;
 	color: #F2F2F2;
 	margin-bottom: 0px;
@@ -221,89 +227,36 @@ li
 	font-size: 5vh;
 }
 
-#jumbo_permanent_content
-{
-	/* display: none; */
-	position: relative;
-	height: 100vh;
-}
-
-#jumbo_center_section
+#jumbo_center_content
 {
 	position: absolute;
 	width: 100%;
-	height: 200px;
-	top: 0;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	margin: auto;
-}
-
-#mypic_and_title_container
-{
-	position: absolute;
-	overflow: hidden;
-	height: 100%;
-	width: 100%;
-	top: 5%;
-	left: 0;
-	right: 0;
-	margin: auto;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 	color: #F2F2F2;
 	text-shadow: 2px 2px #000000;
 }
 
-#mypic_container
-{
-	position: relative;
-	width: 100%;
-	top: 0px;
-    bottom: 0px;
-    left: 0px;
-    right: 0px;
-	margin: auto;
-}
-
-#my_pic
-{
-	position: relative;
-	height: 200px;
-	width: 0;
-}
-
-#my_name
+#jumbo_center_content #my_name
 {
 	position: relative;
 	font-family: 'Lato', sans-serif;
 	font-weight: 700;
-	font-size: 5.0vw;
-	width: 100%;
+	font-size: 5.0em;
+	padding-bottom: 10px;
+	border-bottom: 1px solid #F2F2F2;
+	borer-bottom-color: rgba(255, 255, 255, 0.35);
+	display: inline-block;
 }
 
-#jumbotron_separator
-{
-	position: relative;
-	background: #CDCBCB;
-	height: 1px;
-	width: 40%;
-	top: 0;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	margin-right: auto;
-	margin-left: auto;
-	margin-top: 15px;
-	margin-bottom: 15px;
-}
-
-#my_title
+#jumbo_center_content #my_title
 {
 	position: relative;
 	font-family: 'Lato', sans-serif;
 	font-weight: 300;
-	font-size: 2.5vw;
-	width: 100%;
+	font-size: 2.5em;
+	margin: 0px !important;
 }
 
 /* Profile Section
@@ -738,9 +691,4 @@ li
 	margin: auto;
 	padding-bottom: 10px;
 	color: #646363;
-}
-
-a:hover
-{
-	text-decoration: none !important;
 }
